tests/ui/lint/snapshots/unnecessary_lazy_evaluations_unwrap_or_else_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary lazy evaluation
   ╭─[test.lis:4:28]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = r.unwrap_or_else(|_| 0)
   ·                            ──┬──
   ·                              ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.unwrap_or_else(...)` with `.unwrap_or(...)` to pass the value directly · code: [lint.unnecessary_lazy_evaluations]
