tests/ui/lint/snapshots/unnecessary_map_on_constructor_effectful_payload_lambda_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary `map`
   ╭─[test.lis:7:11]
 6 │ fn main() {
 7 │   let _ = Some(compute()).map(|x| x + 1)
   ·           ───────────────┬──────────────
   ·                          ╰── can be simpler
 8 │ }
   ╰────
  help: Replace `Some(x).map(f)` with `Some(f(x))` · code: [lint.unnecessary_map_on_constructor]
