tests/ui/lint/snapshots/unnecessary_map_on_ok.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Unnecessary `map`
   ╭─[test.lis:3:32]
 2 │ fn main() {
 3 │   let _: Result<int, string> = Ok(1).map(|x| x + 1)
   ·                                ──────────┬─────────
   ·                                          ╰── can be simpler
 4 │ }
   ╰────
  help: Replace `Ok(x).map(f)` with `Ok(f(x))` · code: [lint.unnecessary_map_on_constructor]
