tests/ui/lint/snapshots/unnecessary_min_or_max_identical_min.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Unnecessary `min` call
   ╭─[test.lis:4:11]
 3 │   let x: int = 3
 4 │   let _ = min(x, x)
   ·           ────┬────
   ·               ╰── always returns the same operand
 5 │ }
   ╰────
  help: This `min` always evaluates to one of its operands, so it has no effect. Simplify it to that operand · code: [lint.unnecessary_min_or_max]
