tests/ui/lint/snapshots/unnecessary_min_or_max_identical_string.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary `min` call
   ╭─[test.lis:4:11]
 3 │   let s: string = "a"
 4 │   let _ = min(s, s)
   ·           ────┬────
   ·               ╰── always returns the same operand
 5 │ }
   ╰────
  help: This `min` always evaluates to one of its operands, so it has no effect. Simplify it to that operand · code: [lint.unnecessary_min_or_max]
