tests/ui/lint/snapshots/unnecessary_min_or_max_uint8_floor.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary `max` call
   ╭─[test.lis:4:11]
 3 │   let b: uint8 = 5
 4 │   let _ = max(b, 0)
   ·           ────┬────
   ·               ╰── always returns the same operand
 5 │ }
   ╰────
  help: This `max` always evaluates to one of its operands, so it has no effect. Simplify it to that operand · code: [lint.unnecessary_min_or_max]
